# tetris-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: main.rs  shape.rs
src/tetris/: mod.rs  shape.rs  tetris.rs
src/tetris/ai/: bot.rs  mod.rs
src/tetris/model/: board.rs  mod.rs  shape.rs  world.rs
src/tetris/view/: game.rs  gameover.rs  menu.rs  mod.rs  scene.rs  subgame.rs  window.rs
src/tetris_env/: board.rs  bot.rs  gameover.rs  menu.rs  mod.rs  scene.rs  shape.rs  tetris.rs  world.rs
